--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,55 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+ion-content{
+  font-family: -apple-system, BlinkMacSystemFont, Roboto, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   --background: #f8f7fd;
+  //  --color: #626161;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+ion-item{
+  --background: transparent;
+  font-family: -apple-system, BlinkMacSystemFont, Roboto, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+ion-list{
+  background-color: transparent;
 }
 
-#container a {
-  text-decoration: none;
+.avatar{
+  width: 35px;
+  height: auto;
+  background-color: #516aff;
+  margin-top: 10px;
+}
+
+ion-chip{
+  padding: 20px !important;
+  border-radius: 200px;
+  --color: #000;
+}
+
+.phone{
+  --background: #ecebfb;
+}
+
+.web{
+  --background: #fcc1cb;
+}
+
+.desktop{
+  --background: #f6d1c0;
+}
+
+.chips ion-col{
+  --ion-grid-column-padding: 0px
+}
+
+.upcoming{
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+}
+
+.upcoming-card{
+  box-shadow: none;
+  --background: #5d60ef;
+  margin-top: 0px;
 }
