--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -52,4 +52,101 @@ ion-chip{
   box-shadow: none;
   --background: #5d60ef;
   margin-top: 0px;
+  --color: #fff;
+  border-radius: 25px;
+  margin-bottom: 0px;
+
+  h2{
+    font-size: 1.15rem;
+    margin-top: 5px;
+  }
+}
+
+.vl{
+  border-left: 1px solid #f89671;
+  height:90%;
+
+}
+
+.chev-icon{
+  margin-top: 15px;
+}
+
+.hapening{
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+  margin-top: 0px;
+}
+
+.happening-card{
+  box-shadow: none;
+  border-radius: 25px;
+  margin-top: 0px;
+
+  h2{
+    color: #000
+  }
+}
+
+.card-avatar{
+  img{
+    width: 30px;
+    border-radius: 12px;
+  }
+  border-radius: 50px;
+  margin-right: 10px;
+}
+
+.one{
+  background-color: #a7a195;
+}
+
+.happening-chip{
+  --background: #ecebfb;
+  --color: #000;
+  padding: 15px !important;
+  border-radius: 50px;
+
+  ion-icon{
+    width: 15px;
+    color: #000;
+  }
+}
+
+ion-footer{
+  ion-toolbar{
+    --background: #f8f7fd;
+  }
+
+  ion-button{
+    --background: #5d60ef !important;
+  }
+}
+
+.footer-icon{
+
+  margin-top: 15px;
+  text-align: center;
+
+  // ion-icon{
+  //   width: 50px;
+  // }
+}
+
+.icon-background{
+  background-color: #edf0ff;
+  padding: 12px 7px 7px 7px;
+  border-radius: 10px;
+
+  ion-icon{
+    color: #000;
+    width: 20px;
+    height: 20px;
+  }
+
+}
+
+
+.text-center{
+  text-align: center;
 }
