--- a/src/app/room/room.page.html
+++ b/src/app/room/room.page.html
@@ -1,9 +1,245 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>room</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content [fullscreen]="true">
+  <ion-grid>
+    <ion-row>
+      <ion-col size="3" class="text-center" [routerLink]="['/home']">
+        <ion-icon class="back-icon" name="chevron-down-outline"></ion-icon>
+      </ion-col>
+      <ion-col size="9" >
+        <h4><b>DATA STRUCTURES</b></h4>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
-<ion-content>
+  <div class="ion-padding">
+    <ion-grid>
+      <ion-row>
+        <ion-col size="4" class="avatar-col">
+          <div class="avatar one">
+            <img src="assets/9.png">
+          </div>
+          <div class="celebrate">
+            <img src="assets/c.png">
+          </div>
+          <div class="mic">
+            <ion-icon name="mic-off"></ion-icon>
+          </div>
+          <div class="name">
+            <span class="name-icon">
+              <img src="assets/Union.png">
+            </span>
+            <span class="name-text"> Kelvin</span>
+          </div>
+        </ion-col>
+        <ion-col size="4" class="avatar-col">
+          <div class="avatar two">
+            <img src="assets/6.png">
+          </div>
+          <div class="celebrate">
+            <img src="assets/c.png">
+          </div>
+          <div class="mic">
+            <ion-icon name="mic-off"></ion-icon>
+          </div>
+          <div class="name">
+            <span class="name-icon">
+              <img src="assets/Union.png">
+            </span>
+            <span class="name-text"> Kadj</span>
+          </div>
+        </ion-col>
+        <ion-col size="4" class="avatar-col">
+          <div class="avatar three">
+            <img src="assets/1.png">
+          </div>
+          <div class="celebrate">
+            <img src="assets/c.png">
+          </div>
+          <div class="name">
+            <span class="name-icon">
+              <img src="assets/Union.png">
+            </span>
+            <span class="name-text"> Kofi</span>
+          </div>
+        </ion-col>
+      </ion-row>
 
+      <ion-row>
+        <ion-col size="4" class="avatar-col">
+          <div class="avatar four">
+            <img src="assets/3.png">
+          </div>
+          <div class="celebrate">
+            <img src="assets/c.png">
+          </div>
+          <div class="mic">
+            <ion-icon name="mic-off"></ion-icon>
+          </div>
+          <div class="name">
+            <span class="name-icon">
+              <img src="assets/Union.png">
+            </span>
+            <span class="name-text"> Ama</span>
+          </div>
+        </ion-col>
+        <ion-col size="4" class="avatar-col">
+          <div class="avatar five">
+            <img src="assets/10.png">
+          </div>
+          <div class="celebrate">
+            <img src="assets/c.png">
+          </div>
+          <div class="name">
+            <span class="name-icon">
+              <img src="assets/Union.png">
+            </span>
+            <span class="name-text"> James</span>
+          </div>
+        </ion-col>
+        <ion-col size="4" class="avatar-col">
+          <div class="avatar six">
+            <img src="assets/11.png">
+          </div>
+          <div class="celebrate">
+            <img src="assets/c.png">
+          </div>
+          <div class="name">
+            <span class="name-icon">
+              <img src="assets/Union.png">
+            </span>
+            <span class="name-text"> Fiifi</span>
+          </div>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col size="4" class="avatar-col">
+          <div class="avatar seven">
+            <img src="assets/2.png">
+          </div>
+          <div class="celebrate">
+            <img src="assets/c.png">
+          </div>
+
+          <div class="name">
+            <span class="name-icon">
+              <img src="assets/Union.png">
+            </span>
+            <span class="name-text"> Abrefa</span>
+          </div>
+        </ion-col>
+        <ion-col size="4" class="avatar-col">
+          <div class="avatar eight">
+            <img src="assets/4.png">
+          </div>
+          <div class="celebrate">
+            <img src="assets/c.png">
+          </div>
+          <div class="name">
+            <span class="name-icon">
+              <img src="assets/Union.png">
+            </span>
+            <span class="name-text"> Anna</span>
+          </div>
+        </ion-col>
+        <ion-col size="4" class="avatar-col">
+          <div class="avatar nine">
+            <img src="assets/7.png">
+          </div>
+          <div class="celebrate">
+            <img src="assets/c.png">
+          </div>
+          <div class="mic">
+            <ion-icon name="mic-off"></ion-icon>
+          </div>
+          <div class="name">
+            <span class="name-icon">
+              <img src="assets/Union.png">
+            </span>
+            <span class="name-text"> Akos</span>
+          </div>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col size="4" class="avatar-col">
+          <div class="avatar ten">
+            <img src="assets/8.png">
+          </div>
+          <div class="celebrate">
+            <img src="assets/c.png">
+          </div>
+          <div class="mic">
+            <ion-icon name="mic-off"></ion-icon>
+          </div>
+          <div class="name">
+            <span class="name-icon">
+              <img src="assets/Union.png">
+            </span>
+            <span class="name-text"> Edo</span>
+          </div>
+        </ion-col>
+        <ion-col size="4" class="avatar-col">
+          <div class="avatar eleven">
+            <img src="assets/5.png">
+          </div>
+          <div class="celebrate">
+            <img src="assets/c.png">
+          </div>
+          <div class="name">
+            <span class="name-icon">
+              <img src="assets/Union.png">
+            </span>
+            <span class="name-text"> Grace</span>
+          </div>
+        </ion-col>
+        <ion-col size="4" class="avatar-col">
+          <div class="avatar twelve">
+            <img src="assets/1.png">
+          </div>
+          <div class="celebrate">
+            <img src="assets/c.png">
+          </div>
+          <div class="name">
+            <span class="name-icon">
+              <img src="assets/Union.png">
+            </span>
+            <span class="name-text"> Nii</span>
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </div>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <div class="bar"></div>
+    <ion-list lines="none" class="input-wrapper-list">
+      <ion-item class="input-wrapper">
+        <ion-input placeholder="Type a thought here..."></ion-input>
+        <div class="send-button" slot="end">
+          <ion-icon name="send" class="send-button-icon">
+
+          </ion-icon>
+        </div>
+      </ion-item>
+    </ion-list>
+    <ion-list lines="none" class="extra-list">
+      <ion-item class="extra-item">
+        <ion-chip class="extra-chip">
+          <ion-avatar>
+            <img src="assets/two-sure.png">
+          </ion-avatar>
+          <ion-label>Leave quietly</ion-label>
+        </ion-chip>
+        <span class="hand" slot="end">
+          <img src="assets/hand.png">
+        </span>
+        <span class="profile" slot="end">
+          <img src="assets/man.png">
+        </span>
+
+      </ion-item>
+    </ion-list>
+  </ion-toolbar>
+</ion-footer>
