--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -79,7 +79,7 @@ ion-chip{
 }
 
 .happening-card{
-  box-shadow: none;
+  box-shadow: none !important;
   border-radius: 25px;
   margin-top: 0px;
 
